cleanup and graalvm config